--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "google-maps-react": "^1.0.19",
     "mysql": "^2.12.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
