--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "> Pithy project description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline | live-server"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,9 @@
   },
   "homepage": "https://github.com/chrislu1207/inventive-ironwood#readme",
   "dependencies": {
-    "start": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline | live-server",
+    "bootstrap": "^4.0.0-alpha.2",
+    "jquery": "^2.2.1",
+    "lodash": "^4.6.1",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "google-maps-react": "^1.0.19",
@@ -25,5 +28,13 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "sequelize": "^3.27.0"
+  },
+   "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.18.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-watch": "^2.0.3"
   }
+
 }
