--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline | nodemon server.js"
+    "start": "babel . --watch --out-dir client/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline | nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,17 +19,21 @@
   "homepage": "https://github.com/chrislu1207/inventive-ironwood#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bookshelf": "^0.10.2",
     "bootstrap": "^4.0.0-alpha.2",
     "express": "^4.14.0",
     "express-partials": "^0.3.0",
+    "express-session": "^1.14.2",
     "google-maps-react": "^1.0.19",
     "jquery": "^2.2.1",
+    "knex": "^0.12.6",
     "lodash": "^4.6.1",
     "mysql": "^2.12.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "request": "^2.79.0",
-    "sequelize": "^3.27.0"
+    "sequelize": "^3.27.0",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
