--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel . --watch --out-dir client/compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline | nodemon server.js"
+    "start": "babel client --watch --out-dir client/compiled --presets=es2015,react --ignore=client/node_modules,client/compiled --source-maps inline | nodemon server.js"
   },
   "repository": {
     "type": "git",
